# smartbackup-fs

./: .gitignore  CMakeLists.txt  ModuleA_USAGE.md  ModuleB_USAGE.md  test_smartbackup.sh
configs/: config.yaml.in
docs/: INSTALL.md  ModuleA_USAGE.md  ModuleB_USAGE.md  ModuleC_STAGE1.md  ModuleC_STAGE2.md  ModuleC_STAGE3.md  ModuleC_USAGE.md  ModuleD_USAGE.md
include/: dedup.h  metadata.h  module_c.h  module_d.h  module_d_integration.h  smartbackupfs.h  version_manager.h
include/module_c/: adaptive_compress.h  block_splitter.h  cache.h  compression.h  dedup_core.h  module_d_adapter.h  storage_monitor_basic.h  storage_prediction.h  system_monitor.h
scripts/: build.sh  demo.sh  run.sh  test.sh  test_all.sh  test_module_d_production.sh  test_transaction_logging.sh  test_versions.sh
src/module_a/: metadata_manager.c  posix_operations.c  smartbackupfs_basic.c
src/module_b/: version_manager.c
src/module_c/: adaptive_compress.c  block_splitter.c  cache.c  compression.c  dedup.c  dedup_core.c  module_d_adapter.c  monitor.c  storage.c  storage_monitor_basic.c  storage_prediction.c  system_monitor.c
src/module_d/: module_d.c  module_d_integration.c
testfs/myfs/documents/: backup.txt
